samples/_failures_safe/1761040399_f4afb8_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7875bf4f.c:121: error: expected ‘;’, ‘,’ or ‘)’ at end of input
